--- a/HighestPaidFemaleAthletes/MainPage.xaml
+++ b/HighestPaidFemaleAthletes/MainPage.xaml
@@ -13,7 +13,7 @@
         <Border.StrokeShape>
             <RoundRectangle CornerRadius="10" />
         </Border.StrokeShape>
-        <chart:SfCartesianChart IsTransposed="True" Background="#262161">
+        <chart:SfCartesianChart IsTransposed="True" Background="Black">
 
             <chart:SfCartesianChart.Title>
                 <Grid>
@@ -21,13 +21,17 @@
                         <ColumnDefinition Width="1*"/>
                         <ColumnDefinition Width="{OnPlatform Android=49*,WinUI=59*,MacCatalyst=59*,iOS=49*}"/>
                     </Grid.ColumnDefinitions>
-                    <VerticalStackLayout Background="#A37CF8" Margin="10,5,0,15" Grid.Column="0" Grid.RowSpan="2"/>
+                    <VerticalStackLayout Background="#E6FF0088" Margin="10,5,0,15" Grid.Column="0" Grid.RowSpan="2"/>
                     <VerticalStackLayout Grid.Column="1" Margin="5">
                         <Label Text="Top Female Athletes in the World by Income, 2023" FontSize="Subtitle" FontFamily="centurygothic" Padding="0,0,5,5" HorizontalTextAlignment="Start" FontAttributes="Bold" TextColor="White"/>
                         <Label Text="The highest paid female athletes in terms of total earnings in 2023" HorizontalTextAlignment="Start" FontSize="{OnPlatform Android=10,WinUI=10,MacCatalyst=16,iOS=11}" FontFamily="centurygothic" TextColor="White" Padding="0,0,0,10"/>
                     </VerticalStackLayout>
                 </Grid>
             </chart:SfCartesianChart.Title>
+
+            <chart:SfCartesianChart.ZoomPanBehavior>
+                <chart:ChartZoomPanBehavior/>
+            </chart:SfCartesianChart.ZoomPanBehavior>
 
             <chart:SfCartesianChart.Legend>
                 <chart:ChartLegend Placement="Bottom">
@@ -43,7 +47,7 @@
             </chart:SfCartesianChart.Legend>
 
             <chart:SfCartesianChart.XAxes>
-                <local:CategoryAxisExt ShowMajorGridLines="False" LabelPlacement="BetweenTicks" EdgeLabelsDrawingMode="{OnPlatform Android=Center}">
+                <local:CategoryAxisExt ShowMajorGridLines="False" LabelPlacement="BetweenTicks" EdgeLabelsDrawingMode="{OnPlatform Android=Center,iOS=Center}" AutoScrollingMode="{OnPlatform Android=Start,iOS=Start}" AutoScrollingDelta="{OnPlatform Android=5,iOS=5}">
                     <local:CategoryAxisExt.AxisLineStyle>
                         <chart:ChartLineStyle Stroke="Black" StrokeWidth="0"/>
                     </local:CategoryAxisExt.AxisLineStyle>
@@ -67,14 +71,11 @@
                     <chart:NumericalAxis.LabelStyle>
                         <chart:ChartAxisLabelStyle LabelFormat="$0M" TextColor="White" FontAttributes="Bold" FontSize="10"/>
                     </chart:NumericalAxis.LabelStyle>
-                    <chart:NumericalAxis.MajorGridLineStyle>
-                        <chart:ChartLineStyle Stroke="Beige"/>
-                    </chart:NumericalAxis.MajorGridLineStyle>
                 </chart:NumericalAxis>
             </chart:SfCartesianChart.YAxes>
 
             <!--On-Field Earning Series-->
-            <chart:StackingColumnSeries ItemsSource="{Binding AthletesData}" XBindingPath="AthleteName" YBindingPath="OnFieldEarning" Fill="#EF3F37" Label="On-Field Earnings" ShowDataLabels="True">
+            <chart:StackingColumnSeries ItemsSource="{Binding AthletesData}" XBindingPath="AthleteName" YBindingPath="OnFieldEarning" Fill="#E6FF0088" Label="On-Field Earnings" ShowDataLabels="True">
                 <chart:StackingColumnSeries.DataLabelSettings>
                     <chart:CartesianDataLabelSettings LabelPlacement="Outer">
                         <chart:CartesianDataLabelSettings.LabelStyle>
@@ -85,7 +86,7 @@
             </chart:StackingColumnSeries>
 
             <!--Off-Filed Earning Series-->
-            <chart:StackingColumnSeries ItemsSource="{Binding AthletesData}" XBindingPath="AthleteName" YBindingPath="OffFieldEarning" Fill="#FBAF41" Label="Off-Field Earnings" ShowDataLabels="True">
+            <chart:StackingColumnSeries ItemsSource="{Binding AthletesData}" XBindingPath="AthleteName" YBindingPath="OffFieldEarning" Fill="#E640ACFF" Label="Off-Field Earnings" ShowDataLabels="True">
                 <chart:StackingColumnSeries.DataLabelSettings>
                     <chart:CartesianDataLabelSettings LabelPlacement="Outer">
                         <chart:CartesianDataLabelSettings.LabelStyle>
